<resources>
    <string name="app_name">HandRehab</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="media_pipe">MediaPipe</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum recognized results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum recognized results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the gesture recognizer.</string>
    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_hand_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_hand_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_hand_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_delegate">Delegate</string>
    <string name="main_fragment">Hauptmenü</string>
    <string name="camera_fragment"></string>
    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <string name="tv_welcome">Willkommen in der HandRehab-App</string>
    <string name="hint_email">Email</string>
    <string name="hint_passwort">Passwort</string>
    <string name="btn_login">Einloggen</string>
    <string name="tv_passwort">Passwort vergessen?</string>
    <string name="hint_name">Benutzername</string>
    <string name="tv_login">Login</string>
    <string name="tv_signin">Registrieren</string>
    <string name="tv_login_register">Registriere dich zunächst und logge dich anschließend ein!</string>
    <string name="btn_register">Registrieren</string>
    <string name="required">erforderlich</string>
    <string name="verify_mail">Sie erhalten nun eine E-mail, in der die Email-Adresse einmal bestätigt werden muss!</string>
    <string name="login_success">Einloggen erfolgreich!</string>
    <string name="reminder_verify">Bestätigen Sie ihre Email-Adresse!</string>
    <string name="reset_pw">Passwort zurückgesetzt</string>
    <string name="forgotPw_title">Passwort vergessen</string>
    <string name="forgotPw_msg">Gib deine E-mail Adresse an. Du erhälst anschließend eine Mail, in der du dein Passwort zurück setzen kannst</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="fill_out">Email eintragen</string>
    <string name="btn_log_out">Ausloggen</string>
    <string name="alert_dialog_message_wifi">Für die Nutzung dieser App wird W-lan benötigt. Bitte verbinde dein Smartphone zunächst mit dem W-lan.</string>
    <string name="alert_dialog_title_reminder">Erinnerung:</string>
    <string name="accept">Ok</string>
    <string name="title_home">Startseite</string>
    <string name="title_exercise">Übungen</string>
    <string name="title_setting">Einstellungen</string>
    <string name="hand_rehab">HandRehab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_description">Hier steht die Beschreibung zu dieser Übung. Die Übung wird erläutert und erklärt. Stellen Sie zunächst die Anzahl
    an Wiederholungen und die Anzahl an Sätzen für diese Übung fest. Anschließend drücken sie den "Start"-Knopf und die Übung kann druchgeführt werden. Nehme sie sie Hand aus
    dem Bild um eine Pause einzulegen, die Übung wird dadruch pausiert. Stellen sie die rechte oder linke Hand ein.</string>
    <string name="text_view_title_exercise">Titel der Übung</string>
    <string name="button_start">Übung starten</string>
    <string name="hint_text_repetitions">Wiederholungen</string>
    <string name="hint_text_sets">Sätze</string>
    <string name="title_hand_extension_flexion">Finger Extension/Flexion</string>
    <string name="title_little_finger_extension_flexion">Kleiner Finger Extension/Flexion</string>
    <string name="title_middle_finger_extension_flexion">Mittelfinger Extension/Flexion</string>
    <string name="title_pointing_finger_extension_flexion">Zeigefinger Extension/Flexion</string>
    <string name="title_thumb_extension_flexion">Daumen Extension/Flexion</string>
    <string name="note_exercise">Stelle dein Smartphone angelehnt gegen einen Gegenstand, sodass deine Hand gut sichtbar in der Kamera ist. Optional: Stütze deinen Ellenbogen auf einem Tisch als zusätzliche Hilfestellung ab.</string>
    <string name="description_pause">Wenn du eine Pause einlegen möchtest, nimm deine Hand einfach aus dem Kamerabild und die Übung wird pausiert. Sobald du deine Hand wieder vor die Kamera hälst, wird die Übung an der Stelle fortgeführt.</string>
    <string name="description_repeat">Wiederhole die Bewegung so oft bis die festgelegte Anzahl erreicht ist. Zwischen den Durchführungen kann eine Pause eingelegt werden. </string>
    <string name="description_all_fingers_spread">Öffne die Handfläche. Spreize anschließend die Finger auseinander und wieder zusammen.Versuche die Finger so weit wie möglich zu öffnen.</string>
    <string name="description_little_finger_spread">Öffne die Handfläche. Spreize den kleinen Finger vom Ringfinger weg und ziehe diese anschließend wieder zusammen.</string>
    <string name="description_middle_finger_spread">Öffne die Handfläche. Spreize den Mittelfinger und den Ringfinger auseinander und anschließend wieder zusammen. </string>
    <string name="description_thumb_spread">Öffne die Handfläche. Spreize den Daumen vom Zeigefinger weg und ziehe diese anschließend wieder zusammen. </string>
    <string name="description_pointing_finger_spread">Öffne die Handfläche. Spreize den Zeigefinger vom Mittelfinger weg und ziehe diese anschließend wieder zusammen. </string>
    <string name="description_pointing_finger_open_close">Starte die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust. Basierend auf der gewählten Startposition, öffne oder schließe den Zeigefinger so weit wie möglich. Die restlichen Finger können ebenfalls mit geöffnet/geschlossen werden, falls die Übung dadurch leichter fällt und besser durchgeführt werden kann.</string>
    <string name="description_middle_finger_open_close">Starte die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust. Basierend auf der gewählten Startposition, öffne oder schließe den Mittelfinger so weit wie möglich. Die restlichen Finger können
    ebenfalls mit geöffnet/geschlossen werden, falls die Übung dadurch leichter fällt und besser durchgeführt werden kann.</string>
    <string name="description_ring_finger_open_close">Starte die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust. Basierend auf der gewählten Startposition, öffne oder schließe den Ringfinger so weit wie möglich. Die restlichen Finger können
     ebenfalls mit geöffnet/geschlossen werden, falls die Übung dadurch leichter fällt und besser durchgeführt werden kann.</string>
    <string name="description_little_finger_open_close">Starte die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust. Basierend auf der gewählten Startposition, öffne oder schließe den kleinen Finger so weit wie möglich. Die restlichen Finger können
     ebenfalls mit geöffnet/geschlossen werden, falls die Übung dadurch leichter fällt und besser durchgeführt werden kann.</string>
    <string name="description_thumb_to_palm">Führe die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust durch. Spreize den Daumen von der Handfläche weg und bewege diesen anschließend so weit wie möglich zur Handinnenfläche hin.</string>
    <string name="description_all_finger_open_close">Starte die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust. Basierend auf der gewählten Startposition, öffne oder schließe alle Finger so weit wie möglich.</string>
    <string name="description_little_finger_half_open_close">Starte die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust. Basierend auf der gewählten Startposition, öffne oder schließe den kleinen Finger bis zur Hälfte. Die restlichen Finger können
    ebenfalls mit geöffnet/geschlossen werden, falls die Übung dadurch leichter fällt und besser durchgeführt werden kann.</string>
    <string name="description_pointing_finger_half_open_close">Starte die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust. Basierend auf der gewählten Startposition, öffne oder schließe den Zeigefinger bis zur Hälfte. Die restlichen Finger können
    ebenfalls mit geöffnet/geschlossen werden, falls die Übung dadurch leichter fällt und besser durchgeführt werden kann.</string>
    <string name="description_middle_finger_half_open_close">Starte die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust. Basierend auf der gewählten Startposition, öffne oder schließe den Mittelfinger bis zur Hälfte. Die restlichen Finger können
    ebenfalls mit geöffnet/geschlossen werden, falls die Übung dadurch leichter fällt und besser durchgeführt werden kann.</string>
    <string name="description_ring_finger_half_open_close">Starte die Übung entweder mit einer geöffneten Handfläche oder einer geschlossenen Faust. Basierend auf der gewählten Startposition, öffne oder schließe den Ringfinger bis zur Hälfte. Die restlichen Finger können
    ebenfalls mit geöffnet/geschlossen werden, falls die Übung dadurch leichter fällt und besser durchgeführt werden kann.</string>
    <string name="description_tilt_hand_joint">Halte die geöffnete Hand um 90 grad gedreht vor die Kamera. Neige anschließend das Handgelenk vor und zurück. Versuche dabei die Finger gestreckt zulassen.</string>
    <string name="title_data">Daten</string>
    <string name="save">Daten gespeichert</string>
    <string name="not_save">Daten nicht gespeichert</string>
    <string name="date_picker_title">Wähle ein Datum aus</string>
    <string name="chart_title">Anzahl abgeschlossener Übungen</string>
    <string name="btn_get_data">Daten</string>
    <string name="button_open">geöffnet</string>
    <string name="button_closed">geschlossen</string>
    <string name="title_welcome">in der HandRehab-App!</string>
    <string name="title_home_start_exercise">Starte eine neue Übungseinheit</string>
    <string name="button_go_to_exercise_list">Neue Übung starten</string>
    <string name="title_go_to_data">Sieh dir deine Fortschritte der letzten Wochen an</string>
    <string name="tv_register">Erstelle einen neuen Account:</string>
    <string name="tv_hand_open_or_closed">Möchtest du die Übung mit einer geschlossenen oder bereits geöffneten Hand starten?</string>
    <string name="tv_data_last_exercise">Daten ihrer letzten Übung</string>
    <string name="tv_right_hand">Rechte Hand</string>
    <string name="tv_left_hand">Linke Hand</string>
    <string name="button_easy">Leicht</string>
    <string name="button_medium">Mittel</string>
    <string name="button_hard">Schwer</string>
</resources>