<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ExerciseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <FrameLayout
            android:id="@+id/FrameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <VideoView
                android:id="@+id/videoViewExercise"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>



        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_view_description"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_title_exercise"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FrameLayout" />

        <Button
            android:id="@+id/buttonStartExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/editTextSets"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/hint_text_sets"
            android:inputType="number"

            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/editTextRepetition"
            app:layout_constraintTop_toTopOf="@+id/editTextRepetition" />

        <EditText
            android:id="@+id/editTextRepetition"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/hint_text_repetitions"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/textViewDescription"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/editTextRepetition"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:singleSelection="true">

            <Button
                android:id="@+id/button1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_open" />

            <Button
                android:id="@+id/button2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_closed" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonHandSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/toggleButton"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton"
            app:singleSelection="true">

            <Button
                android:id="@+id/buttonRight"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_right_hand" />

            <Button
                android:id="@+id/buttonLeft"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_left_hand" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_hand_open_or_closed"
            app:layout_constraintStart_toStartOf="@+id/editTextRepetition"
            app:layout_constraintTop_toBottomOf="@+id/editTextRepetition" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_data_last_exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButtonLevel" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/editTextRepetition"
            app:layout_constraintTop_toBottomOf="@+id/toggleButtonHandSide"
            app:singleSelection="true">

            <Button
                android:id="@+id/buttonEasy"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_easy" />

            <Button
                android:id="@+id/buttonMedium"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_medium" />

            <Button
                android:id="@+id/buttonHard"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_hard" />


        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"

            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonStartExercise"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitleGraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_margin="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textViewTitleGraph" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>