<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.example.handrehab.fragment.MainFragment"
        android:label="@string/main_fragment"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/CameraFragment" />
        <action
            android:id="@+id/action_main_to_permissions"
            app:destination="@id/permissionsFragment" />
        <action
            android:id="@+id/action_MainFragment_to_exerciseFragment"
            app:destination="@id/exerciseFragment" />
        <action
            android:id="@+id/action_MainFragment_to_settingFragment"
            app:destination="@id/settingFragment" />
    </fragment>
    <fragment
        android:id="@+id/CameraFragment"
        android:name="com.example.handrehab.fragment.CameraFragment"
        android:label="@string/camera_fragment"
        tools:layout="@layout/fragment_camera">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/MainFragment" />
        <action
            android:id="@+id/camera_to_permissons"
            app:destination="@id/permissionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/permissionsFragment"
        android:name="com.example.handrehab.PermissionsFragment"
        android:label="PermissionsFragment" >
        <action
            android:id="@+id/action_permissions_to_main_fragment"
            app:destination="@id/MainFragment" />
        <action
            android:id="@+id/action_permissions_to_camera"
            app:destination="@id/CameraFragment"
            app:popUpTo="@id/permissionsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/exerciseFragment"
        android:name="com.example.handrehab.fragment.ExerciseFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/fragment_exercise" >
        <action
            android:id="@+id/action_exerciseFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.handrehab.fragment.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_settingFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
</navigation>